Divide design tokens by examples

--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -275,7 +275,11 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     token="--fs-badge-transition-timing"
     value="var(--fs-transition-timing)"
   />
-  <TokenDivider />
+</TokenTable>
+
+### Design tokens: Big
+
+<TokenTable>
   <TokenRow
     token="--fs-badge-big-text-size"
     value="var(--fs-text-size-legend)"
@@ -284,7 +288,11 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     token="--fs-badge-big-padding"
     value="var(--fs-spacing-1) var(--fs-spacing-2)"
   />
-  <TokenDivider />
+</TokenTable>
+
+### Design tokens: Neutral
+
+<TokenTable>
   <TokenRow
     token="--fs-badge-neutral-bkg-color"
     value="var(--fs-color-neutral-bkg)"
@@ -301,7 +309,11 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-color-neutral-bkg)"
     isColor
   />
-  <TokenDivider />
+</TokenTable>
+
+### Design tokens: Success
+
+<TokenTable>
   <TokenRow
     token="--fs-badge-success-bkg-color"
     value="var(--fs-color-success-bkg)"
@@ -318,7 +330,11 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-color-success-bkg)"
     isColor
   />
-  <TokenDivider />
+</TokenTable>
+
+### Design tokens: Highlighted
+
+<TokenTable>
   <TokenRow
     token="--fs-badge-highlighted-bkg-color"
     value="var(--fs-color-highlighted-bkg)"
@@ -334,7 +350,11 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-color-highlighted-bkg)"
     isColor
   />
-  <TokenDivider />
+</TokenTable>
+
+### Design tokens: Info
+
+<TokenTable>
   <TokenRow
     token="--fs-badge-info-bkg-color"
     value="var(--fs-color-info-bkg)"
@@ -350,7 +370,11 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-color-info-bkg)"
     isColor
   />
-  <TokenDivider />
+</TokenTable>
+
+### Design tokens: Warning
+
+<TokenTable>
   <TokenRow
     token="--fs-badge-warning-bkg-color"
     value="var(--fs-color-warning-bkg)"
@@ -366,7 +390,11 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     value="var(--fs-color-warning-bkg)"
     isColor
   />
-  <TokenDivider />
+</TokenTable>
+
+### Design tokens: Danger
+
+<TokenTable>
   <TokenRow
     token="--fs-badge-danger-bkg-color"
     value="var(--fs-color-danger-bkg)"
@@ -384,7 +412,6 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     isColor
   />
 </TokenTable>
-
 
 ---
 
