Add descriptions for design tokens

--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -292,6 +292,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ### Design tokens: Neutral
 
+Neutral badges present information in a low-contrast style, ideal for secondary statuses or default states.
+
 <TokenTable>
   <TokenRow
     token="--fs-badge-neutral-bkg-color"
@@ -312,6 +314,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 </TokenTable>
 
 ### Design tokens: Success
+
+Success badges use a green palette to confirm actions and indicate favorable outcomes.
 
 <TokenTable>
   <TokenRow
@@ -334,6 +338,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ### Design tokens: Highlighted
 
+Highlighted badges draw attention with a high-contrast color scheme, which is ideal for promotions or featured items.
+
 <TokenTable>
   <TokenRow
     token="--fs-badge-highlighted-bkg-color"
@@ -353,6 +359,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 </TokenTable>
 
 ### Design tokens: Info
+
+Info badges use a blue palette to communicate neutral but helpful information, guidance, or notifications.
 
 <TokenTable>
   <TokenRow
@@ -374,6 +382,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ### Design tokens: Warning
 
+Warning badges uses and orange or yellow palette to signal caution, pending actions, or non-critical alerts.
+
 <TokenTable>
   <TokenRow
     token="--fs-badge-warning-bkg-color"
@@ -393,6 +403,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 </TokenTable>
 
 ### Design tokens: Danger
+
+Danger badges use a red palette to warn users of critical errors, destructive actions, or important failures.
 
 <TokenTable>
   <TokenRow
