Grammar review suggestions
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -382,7 +382,7 @@ Info badges use a blue palette to communicate neutral but helpful information, g
 
 ### Design tokens: Warning
 
-Warning badges uses and orange or yellow palette to signal caution, pending actions, or non-critical alerts.
+Warning badges use an orange or yellow palette to signal caution, pending actions, or non-critical alerts.
 
 <TokenTable>
   <TokenRow
@@ -458,7 +458,7 @@ You can target and override `Badge` styles using the following data attributes:
 - Don't use long texts in badges. A reasonable character limit is 15.
 - Don't label badges with active verbs.
 - Don't rely on color alone to convey meaning. Ensure there is a text alternative for that meaning as well.
-- Don’t place badges next to buttons, since they are not interactive and could confuse users.
+- Don't place badges next to buttons, since they are not interactive and could confuse users.
 
 ---
 
