--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -12,7 +12,7 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Badge___bcedffeb307527c1606be224a7fb5ac1.png
 ---
 
-[Code source](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Badge)
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Badge)
 
 The `Badge` component is used to emphasize an item's state by displaying concise, non-interactive labels. Typical use cases include:
 
