--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -86,6 +86,8 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ### Size
 
+The `Badge` component can be displayed in two sizes: `small` (default) and `big`.
+
 #### Big
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
@@ -105,7 +107,6 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     ```
   </Tab>
 </Tabs>
-
 
 ### Variants
 
