--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -17,7 +17,7 @@ sidebar_custom_props:
 The `Badge` component is used to emphasize an item's state by displaying concise, non-interactive labels. Typical use cases include:
 
 - Highlighting promotional discounts
-- Indicating product features (e.g., `vegan` or `cruelty-free`).
+- Indicating product features (e.g., `vegan` or `cruelty-free`)
 - Displaying availability statuses (e.g., `NEW`, `ONLY 1 LEFT`, and `OUT OF STOCK`).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
