--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -18,7 +18,7 @@ The `Badge` component is used to emphasize an item's state by displaying concise
 
 - Highlighting promotional discounts
 - Indicating product features (e.g., `vegan` or `cruelty-free`)
-- Displaying availability statuses (e.g., `NEW`, `ONLY 1 LEFT`, and `OUT OF STOCK`).
+- Displaying availability statuses (e.g., `NEW`, `ONLY 1 LEFT`, and `OUT OF STOCK`)
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
