Adding small size example

--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -108,6 +108,10 @@ The `Badge` component can be displayed in two sizes: `small` (default) and `big`
   </Tab>
 </Tabs>
 
+#### Small (Default)
+
+
+
 ### Variants
 
 #### Neutral
