--- a/docs/faststore/components/atoms/checkbox.mdx
+++ b/docs/faststore/components/atoms/checkbox.mdx
@@ -5,7 +5,10 @@ components:
   - Checkbox.tsx
 ---
 
-<i class="fa-brands fa-github"></i> [Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Checkbox)
+[<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Checkbox)
+
+Checkboxes are interactive form controls that let users select one or more options by toggling them on or off. They are commonly used in forms, filter panels, and preference settings.
+The `Checkbox` component provides accessible markup, design tokens for customization, and states for `checked`, `unchecked`, `disabled`, and partially (`partial`) checked usage.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -34,6 +37,7 @@ components:
     ```
   </Tab>
 </Tabs>
+
 ---
 
 ## Usage
