--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -26,7 +26,7 @@ This feature introduces the following hooks as part of the regionalization and l
 
 Delivery Promise offers shoppers two product filtering options:
 - [Global filters](#global-filters): Applies to all store navigation.
-- [Product List Page (PLP) or search page](#plp-or-search-page-filters): Only applies to the current page they're navigating.
+- [Product List Page (PLP) or search page](#plp-or-search-page-filters): Only applies to the current page the shopper is navigating.
 
 >ℹ Learn more about filter usage and user flows in the [Delivery Promise Figma Community](https://www.figma.com/community/file/1545494767147168145) page.
 
