--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -110,7 +110,23 @@ The `Badge` component can be displayed in two sizes: `small` (default) and `big`
 
 #### Small (Default)
 
+<Tabs items={['Example', 'Code']} defaultIndex="0">
+  <Tab>
+    <OverviewSection>
+      <Badge size="small">Small Badge</Badge>
+    </OverviewSection>
+  </Tab>
+  <Tab>
+    ```tsx
+    import React from "react";
+    import { Badge } from "@faststore/ui";
 
+    export default function BadgeSmall() {
+      return <Badge size="small">Small Badge</Badge>;
+    }
+    ```
+  </Tab>
+</Tabs>
 
 ### Variants
 
