Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -471,7 +471,7 @@ You can target and override `Badge` styles using the following data attributes:
 ### ✅ Do's
 
 - Place the badge next to or on top of its related item.
-- Be cautious about the badge's positioning, writing, shape, and color to avoid any confusion with components similar in appearance.
+- Be cautious about the badge's positioning, text, shape, and color to avoid any confusion with components similar in appearance.
 - Ensure sufficient text contrast against the background.
 
 ### ❌ Don'ts
@@ -479,7 +479,7 @@ You can target and override `Badge` styles using the following data attributes:
 - Don't use long texts in badges. A reasonable character limit is 15.
 - Don't label badges with active verbs.
 - Don't rely on color alone to convey meaning. Ensure there is a text alternative for that meaning as well.
-- Don't place badges next to buttons, since they are not interactive and could confuse users.
+- Don't place badges next to buttons, as badges are not interactive and could confuse users.
 
 ---
 
