--- a/docs/faststore/components/atoms/checkbox.mdx
+++ b/docs/faststore/components/atoms/checkbox.mdx
@@ -260,8 +260,8 @@ You can target and override `Checkbox` styles using the following data attribute
 
 ### ❌ Don’ts
 
-- Don’t use a `Checkbox` when only one option is possible. In this case, use a [Radio](https://developers.vtex.com/docs/guides/faststore/atoms-radio) instead.
-- Don’t use checkboxes for actions that happen immediately on click (e.g., submitting data)—they should only toggle state.
+- Don’t use a `Checkbox` when only one option is possible. In that case, use a [Radio](https://developers.vtex.com/docs/guides/faststore/atoms-radio) instead.
+- Don’t use checkboxes to trigger immediate actions such as submitting data.
 
 ---
 
