--- a/docs/faststore/components/atoms/checkbox.mdx
+++ b/docs/faststore/components/atoms/checkbox.mdx
@@ -9,7 +9,7 @@ components:
 
 Checkboxes are interactive form controls that let users select one or more options by toggling them on or off. They are commonly used in forms, filter panels, and preference settings.
 
-The `Checkbox` component provides accessible markup, design tokens for customization, and states for `checked`, `disabled`, and partial (partially checked) states.
+The `Checkbox` component provides accessible markup, design tokens for customization, and states for `checked`, `disabled`, and `partial` (partially checked).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
