Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -25,8 +25,8 @@ This feature introduces the following hooks as part of the regionalization and l
 ## Filter options
 
 Delivery Promise offers shoppers two product filtering options:
-- [Global filters](#global-filters): Apply across all store navigation.
-- [Product List Page (PLP) or search page](#plp-or-search-page-filters): Only applies to the current page the shopper is navigating.
+- [Global filters](#global-filters): Apply to all store navigation.
+- [Product List Page (PLP) or search page](#plp-or-search-page-filters): Apply only to the current page the shopper is viewing.
 
 >ℹ Learn more about filter usage and user flows in the [Delivery Promise Figma Community](https://www.figma.com/community/file/1545494767147168145/delivery-promise-by-vtex) page.
 
