--- a/docs/faststore/components/atoms/textarea.mdx
+++ b/docs/faststore/components/atoms/textarea.mdx
@@ -179,7 +179,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ## Data attributes
 
-You can target and override `Badge` styles using the following data attributes:
+You can target and override `Textarea` styles using the following data attributes:
 
 `data-fs-textarea`
 
