--- a/docs/faststore/components/atoms/textarea.mdx
+++ b/docs/faststore/components/atoms/textarea.mdx
@@ -63,7 +63,7 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
     <OverviewSection>
       <Textarea placeholder="Text area disabled" id="textareafield-disabled" disabled />
     </OverviewSection>
-  <Tab>
+  </Tab>
   <Tab>
     ```tsx
     import React from 'react'
